src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>AlternateVAT__c</fullName>
        <label>Alternate VAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Article__c</fullName>
        <externalId>true</externalId>
        <label>Article (SKU)</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandCodeGDW__c</fullName>
        <description>This is the Brand Code from the Global Product Structure in GDW.</description>
        <inlineHelpText>This is the Brand Code from the Global Product Structure in GDW.</inlineHelpText>
        <label>Brand Code GDW</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandDescGDW__c</fullName>
        <description>This is the Brand Description from the Global Product Structure in GDW.</description>
        <inlineHelpText>This is the Brand Description from the Global Product Structure in GDW.</inlineHelpText>
        <label>Brand Desc GDW</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area_Brand__c</fullName>
        <description>This formula field combines the Busienss Area Code and Brand like  &quot;DI1 - Ankylos&quot;. Use this field for grouping in reports etc</description>
        <formula>Business_Area_Code__c  &amp; &quot; - &quot;  &amp;  Brand__c</formula>
        <inlineHelpText>This formula field combines the Busienss Area Code and Brand like  &quot;DI1 - Ankylos&quot;. Use this field for grouping in reports etc</inlineHelpText>
        <label>Business Area - Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area_Category_Brand_HQ__c</fullName>
        <description>Combination of PA - BAC and Name (Primary use for HQ)</description>
        <formula>Business_Area_Code__c &amp; &quot; - &quot; &amp; Product_Category__c &amp; &quot; - &quot; &amp;  Brand__c</formula>
        <label>Business Area - Category - Brand (HQ)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area_Code__c</fullName>
        <label>Business Area Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area_Description__c</fullName>
        <description>Description corresponding to Business Area Code and Business Area Name.</description>
        <label>Business Area Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area_Name__c</fullName>
        <description>Name corresponding to the Business Area Code.</description>
        <label>Business Area Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this product is used in CPQ Quotes</description>
        <label>CPQ Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommissionGroup__c</fullName>
        <description>From AX</description>
        <label>Commission Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <description>The Company Code as written in the GDW</description>
        <inlineHelpText>The Company Code as written in the GDW</inlineHelpText>
        <label>Company Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_Level1__c</fullName>
        <label>D-Level1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_Level2__c</fullName>
        <label>D-Level2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_Level3__c</fullName>
        <label>D-Level3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dashboard_Product__c</fullName>
        <label>Dashboard Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERP_Source_Description__c</fullName>
        <formula>CASE(ERP_Source__c, 
1, &quot;M3&quot;, 
2, &quot;AX&quot;, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERP Source Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Source__c</fullName>
        <description>The ERP Source. 1= M3, 2=AX</description>
        <inlineHelpText>The ERP Source. 1= M3, 2=AX</inlineHelpText>
        <label>ERP Source</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GPP_Code__c</fullName>
        <inlineHelpText>Global Product Platform Code</inlineHelpText>
        <label>GPP Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPP_Desc__c</fullName>
        <inlineHelpText>Global Product Platform Description</inlineHelpText>
        <label>GPP Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPP_Description__c</fullName>
        <description>This field is a concatenation of GPP + GPP Description. Used to display PG Info on all products regardless of SKU type. Used in WAVE, Search Lists, ..etc</description>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &quot;Global&quot;), GPP_Code__c &amp;&quot; - &quot; &amp; GPP_Desc__c, GlobalSKUMapping__r.GPP_Code__c &amp; &quot; - &quot; &amp; GlobalSKUMapping__r.GPP_Desc__c)</formula>
        <label>GPP - Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GdwUniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>GDW Unique Key</label>
        <length>42</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GlobalSKUMapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GlobalSKU Mapping</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Mapped LocalSKUs</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ID_18__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <label>ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_System_ID__c</fullName>
        <label>Legacy System ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <description>Used for Implants Germany to calculate the gross price on invoices for comparison towards net prices</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MY_SKU__c</fullName>
        <description>This field is checked when the Product is valid in the users market. The user always have access to all products in SFDC. This field is used to help spotting the valid products in the market</description>
        <formula>IF(UPPER(TEXT($User.Market__c))=UPPER(TEXT(SSIS_ERP_SKU_Market_Mapping__r.Market__c)), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is checked when the Product is valid in the users market. The user always have access to all products in SFDC. This field is used to help spotting the valid products in the market</inlineHelpText>
        <label>Valid in my Market?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>The Market that the Company Code belongs to</description>
        <formula>TEXT(SSIS_ERP_SKU_Market_Mapping__r.Market__c)</formula>
        <inlineHelpText>The Market that the Company Code belongs to</inlineHelpText>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG1_Code__c</fullName>
        <label>Product Group 1 Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG1_Desc__c</fullName>
        <label>Product Group 1 Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG1_Description__c</fullName>
        <description>This field is a concatenation of PG1 + PG1 Description. Used to display PG Info on all products regardless of SKU type. Used in WAVE, Search Lists, ..etc</description>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &quot;Global&quot;), PG1_Code__c &amp;&quot; - &quot; &amp; PG1_Desc__c, GlobalSKUMapping__r.PG1_Code__c &amp; &quot; - &quot; &amp; GlobalSKUMapping__r.PG1_Desc__c)</formula>
        <inlineHelpText>This field is a concatenation of PG1 + PG1 Description. Used to display PG Info on all products regardless of SKU type. Used in WAVE, Search Lists, ..etc</inlineHelpText>
        <label>PG1 - Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG2_Code__c</fullName>
        <label>Product Group 2 Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG2_Desc__c</fullName>
        <label>Product Group 2 Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG2_Description__c</fullName>
        <description>This field is a concatenation of PG1 + PG1 Description. Used to display PG Info on all products regardless of SKU type. Used in WAVE, Search Lists, ..etc</description>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &quot;Global&quot;), PG2_Code__c &amp;&quot; - &quot; &amp; PG2_Desc__c, GlobalSKUMapping__r.PG2_Code__c &amp; &quot; - &quot; &amp; GlobalSKUMapping__r.PG2_Desc__c)</formula>
        <inlineHelpText>This field is a concatenation of PG1 + PG1 Description. Used to display PG Info on all products regardless of SKU type. Used in WAVE, Search Lists, ..etc</inlineHelpText>
        <label>PG2 - Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG3_Code__c</fullName>
        <label>Product Group 3 Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG3_Desc__c</fullName>
        <label>Product Group 3 Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG3_Description__c</fullName>
        <description>This field is a concatenation of PG1 + PG1 Description. Used to display PG Info on all products regardless of SKU type. Used in WAVE, Search Lists, ..etc</description>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &quot;Global&quot;), PG3_Code__c &amp;&quot; - &quot; &amp; PG3_Desc__c, GlobalSKUMapping__r.PG3_Code__c &amp; &quot; - &quot; &amp; GlobalSKUMapping__r.PG3_Desc__c)</formula>
        <inlineHelpText>This field is a concatenation of PG1 + PG1 Description. Used to display PG Info on all products regardless of SKU type. Used in WAVE, Search Lists, ..etc</inlineHelpText>
        <label>PG3 - Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductStructure__c</fullName>
        <description>Shows the full product structure of the Product record.</description>
        <formula>SBU_Code__c &amp; IF( ISBLANK(SBU_Name__c),null, &quot; &quot;) &amp; SBU_Name__c &amp; &quot; - &quot; &amp; GPP_Code__c &amp; IF( ISBLANK(GPP_Desc__c),null, &quot; &quot;) &amp; GPP_Desc__c &amp; &quot; - &quot; &amp; PG1_Code__c &amp; IF( ISBLANK(PG1_Desc__c),null, &quot; &quot;) &amp; PG1_Desc__c &amp; &quot; - &quot; &amp; PG2_Code__c &amp; IF( ISBLANK(PG2_Desc__c),null, &quot; &quot;) &amp; PG2_Desc__c &amp; &quot; - &quot; &amp; PG3_Code__c &amp; IF( ISBLANK(PG3_Desc__c),null, &quot; &quot;)  &amp; PG3_Desc__c &amp; &quot; - &quot; &amp; PG4_Code__c &amp; IF( ISBLANK(PG4_Desc__c),null, &quot; &quot;)  &amp; PG4_Desc__c &amp; &quot; - &quot; &amp; Name</formula>
        <inlineHelpText>Shows the full product structure of the Product record.</inlineHelpText>
        <label>Product Structure (HQ)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_2_Description__c</fullName>
        <description>Shows a concatenation of Product Group 2 and Product Group 2 Description, giving it the same layout as product group 2 on the Sales History object</description>
        <formula>PG2_Code__c &amp; &quot; - &quot; &amp;  PG2_Desc__c</formula>
        <inlineHelpText>Shows a concatenation of Product Group 2 and Product Group 2 Description, giving it the same layout as product group 2 on the Sales History object</inlineHelpText>
        <label>Product Group 2 - Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group OLD</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_HQ__c</fullName>
        <description>Power One field</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product # (HQ)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_group_description__c</fullName>
        <label>Product Group Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AssetAmendmentBehavior__c</fullName>
        <description>Indicates how assets representing this product behave on amendments.</description>
        <inlineHelpText>Select a behavior when amending assets representing this product. By default, asset quantities cannot decrease unless an upgrade is added, and no refund is applied.</inlineHelpText>
        <label>Asset Amendment Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>Allow Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__AssetConversion__c</fullName>
        <description>Determines how this product is converted to asset.</description>
        <inlineHelpText>Indicates how this product is converted to asset.</inlineHelpText>
        <label>Asset Conversion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One per quote line</fullName>
                    <default>true</default>
                    <label>One per quote line</label>
                </value>
                <value>
                    <fullName>One per unit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BatchQuantity__c</fullName>
        <description>Quantity in one batch for products sold in batches. Quantity entered in quote line will be divided by this number.</description>
        <inlineHelpText>Non-blank value designates this product is sold in batches. Enter quantity in each batch. Quantity entered in quote will be divided by this value and rounded up to the nearest integer.</inlineHelpText>
        <label>Batch Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Determines how often this product will be invoiced.</description>
        <inlineHelpText>Determines how often this product will be invoiced.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingType__c</fullName>
        <description>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</description>
        <inlineHelpText>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BlockPricingField__c</fullName>
        <description>Field used to calculate block pricing.</description>
        <inlineHelpText>Field used to calculate block pricing.</inlineHelpText>
        <label>Block Pricing Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity</fullName>
                    <default>true</default>
                    <label>Quantity</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ChargeType__c</fullName>
        <description>The type of the product charge.</description>
        <inlineHelpText>The type of the product charge.</inlineHelpText>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ChargeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Component__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks this product as a component, excluding it from selection in product lookup.</description>
        <inlineHelpText>Marks this product as a component, excluding it from selection in product lookup.</inlineHelpText>
        <label>Component</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompoundDiscountRate__c</fullName>
        <description>Discount rate compounded by quantity.</description>
        <inlineHelpText>Discount rate compounded by quantity.</inlineHelpText>
        <label>Compound Discount (%)</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationEvent__c</fullName>
        <description>Specifies when user is prompted to configure this product.</description>
        <inlineHelpText>Use this to control when Configure Products screen shows up for this product. Choose &quot;Add&quot; to limit to initial configuration. Choose &quot;Edit&quot; to subsequent configuration.</inlineHelpText>
        <label>Configuration Event</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__ConfigurationType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationFieldSet__c</fullName>
        <description>The API name of the field set that will be used for this product during configuration.</description>
        <inlineHelpText>The API name of the field set that will be used for this product during configuration.</inlineHelpText>
        <label>Configuration Field Set</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OptionConfiguration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationFields__c</fullName>
        <description>Additional fields collected during configuration of this product. All of these fields must exist on Product Option and Quote Line objects.</description>
        <label>Configuration Fields</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationFormTitle__c</fullName>
        <description>Title of the configuration form rendered from specified configuration fields.</description>
        <inlineHelpText>Title of the configuration form rendered from specified configuration fields.</inlineHelpText>
        <label>Configuration Form Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationType__c</fullName>
        <description>Configuration type of this product: Choose Allowed if the user is allowed to configure the product/bundle, but not required to, Disabled when your bundle automatically selects options, or Required if the product/bundle must be configured.</description>
        <inlineHelpText>Configuration type of this product: Choose Allowed if the user is allowed to configure the product/bundle, but not required to, Disabled when your bundle automatically selects options, or Required if the product/bundle must be configured.</inlineHelpText>
        <label>Configuration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Allowed</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationValidator__c</fullName>
        <description>JavaScript function used to validate configuration of this product.</description>
        <inlineHelpText>JavaScript function used to validate configuration of this product.</inlineHelpText>
        <label>Configuration Validator</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfiguredCodePattern__c</fullName>
        <description>Pattern used to generate product code (SKU) for configured products.</description>
        <inlineHelpText>Pattern used to generate product code (SKU) for configured products.</inlineHelpText>
        <label>Configured Code Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfiguredDescriptionPattern__c</fullName>
        <description>Pattern used to generate dynamic product description for configured products.</description>
        <inlineHelpText>Pattern used to generate dynamic product description for configured products.</inlineHelpText>
        <label>Configured Description Pattern</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SBQQ__CostEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls whether cost for this product may be modified on individual quotes.</description>
        <inlineHelpText>Controls whether cost for this product may be modified on individual quotes.</inlineHelpText>
        <label>Cost Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CostSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount schedule used as a Cost Schedule with this product.</description>
        <inlineHelpText>Discount schedule used as a Cost Schedule with this product.</inlineHelpText>
        <label>Cost Schedule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SBQQ__DiscountSchedule__c.SBQQ__UserDefined__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Products (Cost Schedule)</relationshipLabel>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomConfigurationPage__c</fullName>
        <label>Custom Configuration Page</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomConfigurationRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Configuration Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerCommunityAvailability__c</fullName>
        <description>Determines availability of this product in Customer Community.</description>
        <inlineHelpText>Select how this product should be available in Customer Communities.</inlineHelpText>
        <label>Customer Community Availability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Only when already owned</fullName>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultPricingTable__c</fullName>
        <label>Default Pricing Table</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Segmented</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultQuantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Specifies the starting quantity of the product when added.</description>
        <inlineHelpText>Specify the starting quantity of the product when added.</inlineHelpText>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__DescriptionLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates this product&apos;s description is locked (not editable on the quote).</description>
        <inlineHelpText>Flag that indicates this product&apos;s description is locked (not editable on the quote).</inlineHelpText>
        <label>Lock Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount category assigned to this product.</description>
        <inlineHelpText>Specify discount category for this product.</inlineHelpText>
        <label>Discount Category</label>
        <referenceTo>SBQQ__DiscountCategory__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount schedule for use with this product</description>
        <inlineHelpText>Discount schedule for use with this product</inlineHelpText>
        <label>Discount Schedule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SBQQ__DiscountSchedule__c.SBQQ__UserDefined__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Quantity Discounted Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DynamicPricingConstraint__c</fullName>
        <description>Specifies constraints on dynamically calculated pricing.</description>
        <inlineHelpText>Use to place constraints on dynamically calculated prices.</inlineHelpText>
        <label>Percent Of Total Constraint</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List price is minimum</fullName>
                </value>
                <value>
                    <fullName>List price is maximum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__EnableLargeConfiguration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable large bundle configuration.</description>
        <inlineHelpText>Should be enabled if you experience performance errors during bundle configuration. Bundle will be processed asynchronously.</inlineHelpText>
        <label>Enable Large Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExcludeFromMaintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Excludes this product from percent of total maintenance calculations.</description>
        <inlineHelpText>Check to always exclude this product from percent of total calculations (normally non-subscription products are included in percent of total calculations).</inlineHelpText>
        <label>Exclude From Percent Of Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExcludeFromOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this product should be excluded from transfer to the Opportunity.</description>
        <inlineHelpText>Indicates this product should not be transferred to the opportunity.</inlineHelpText>
        <label>Exclude From Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExternallyConfigurable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, indicates that configuring this Product automatically launches the External Configuration URL, defined in Salesforce CPQ settings.</description>
        <inlineHelpText>When checked, indicates that configuring this Product automatically launches the External Configuration URL, defined in Salesforce CPQ settings.</inlineHelpText>
        <label>Externally Configurable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__GenerateContractedPrice__c</fullName>
        <description>Will generate a contracted price based on the adjusted quote line if flagged.</description>
        <inlineHelpText>Will generate a contracted price based on the adjusted quote line if flagged.</inlineHelpText>
        <label>Generate Contracted Price</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Discount Schedule</fullName>
                </value>
                <value>
                    <fullName>Do Not Generate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__HasConfigurationAttributes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checks to see if Product has Configuration Attributes</description>
        <label>Has Configuration Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__HasConsumptionSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Product is assigned to at least 1 active Consumption Schedule</description>
        <inlineHelpText>Indicates if this product has at least one consumption schedule</inlineHelpText>
        <label>Has Consumption Schedules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Excludes this product from appearing on the quote PDF.</description>
        <inlineHelpText>Excludes this product from appearing on the quote PDF.</inlineHelpText>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__HidePriceInSearchResults__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product price should be displayed in the Product Search Results.</description>
        <inlineHelpText>Select checkbox to hide this product&apos;s price in the Product Search Results.</inlineHelpText>
        <label>Hide Price in Search Results</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>